applications/health-api/health-api.yml
###################################
###         Health-API          ###
##################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: health-api
  namespace: nutrition
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "health.homelab.fidelissauro.dev" 
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: health-api
  namespace: nutrition
spec:
  hosts:
  - "health-api.nutrition.svc.cluster.local"
  - "health.homelab.fidelissauro.dev"
  gateways:
  - health-api
  http:
  - route:
    - destination:
        host: health-api
        port:
          number: 8080 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: health-api
  name: health-api
  namespace: nutrition
spec:
  replicas: 1
  selector:
    matchLabels:
      app: health-api
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: health-api
        name: health-api
        version: v1
    spec:
      serviceAccount: health-api
      containers:
      - image: fidelissauro/health-api:latest
        name: health-api
        ports:
        - containerPort: 8080
          name: http   
        startupProbe:
          failureThreshold: 10
          httpGet:
            path: /healthcheck
            port: 8080
          periodSeconds: 10
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /healthcheck
            port: 8080          
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: health-api
  namespace: nutrition
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"    
  labels:
    app.kubernetes.io/name: health-api
    app.kubernetes.io/instance: health-api 
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
  selector:
    app: health-api
  type: ClusterIP
