applications/health-api/recommendations.yml
---
###################################
###   Recommendations Service   ###
###################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendations-grpc
  namespace: nutrition
spec:
  hosts:
  - "recommendations-grpc.nutrition.svc.cluster.local"
  http:
  - route:
    - destination:
        host: recommendations-grpc
        port:
          number: 30000
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: cancelled,deadline-exceeded,unavailable,internal,reset
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: recommendations-grpc
  namespace: nutrition
spec:
  host: recommendations-grpc.nutrition.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL  
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 1
        connectTimeout: 1s
        tcpKeepalive:
          time: 10s
          interval: 10s
          probes: 9
      http:
        http1MaxPendingRequests: 1
        http2MaxRequests: 1
        maxRequestsPerConnection: 1
        h2UpgradePolicy: UPGRADE
    # outlierDetection:
    #   consecutive5xxErrors: 5
    #   interval: 30s
    #   baseEjectionTime: 30s
    #   maxEjectionPercent: 50
    #   minHealthPercent: 50
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: recommendations-grpc
  name: recommendations-grpc
  namespace: nutrition
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendations-grpc
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "15020"
        policy.cilium.io/proxy-visibility: "<Egress/53/UDP/DNS>,<Egress/30000/TCP/HTTP>"
      labels:
        app: recommendations-grpc
        name: recommendations-grpc
        version: v1
    spec:
      serviceAccount: recommendations-grpc
      containers:
      - image: fidelissauro/recommendations-grpc-service:latest
        name: recommendations-grpc
        ports:
        - containerPort: 30000
          name: grpc   
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: recommendations-grpc
  namespace: nutrition
  annotations:
    prometheus.io/scrape: "false"
    prometheus.io/port: "30000"    
  labels:
    app.kubernetes.io/name: recommendations-grpc
    app.kubernetes.io/instance: health-api 
spec:
  ports:
  - name: grpc
    port: 30000
    protocol: TCP
    appProtocol: grpc
  selector:
    app: recommendations-grpc
  type: ClusterIP
