applications/health-api/water.yml
---
#########################
###   Water Service   ###
#########################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: water-grpc
  namespace: nutrition
spec:
  hosts:
  - "water-grpc.nutrition.svc.cluster.local"
  http:
  - route:
    - destination:
        host: water-grpc
        port:
          number: 30000
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: cancelled,deadline-exceeded,unavailable,internal,reset          
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: water-grpc
  name: water-grpc
  namespace: nutrition
spec:
  replicas: 1
  selector:
    matchLabels:
      app: water-grpc
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "15020"
      labels:
        app: water-grpc
        name: water-grpc
        version: v1
    spec:
      serviceAccount: water-grpc
      containers:
      - image: fidelissauro/water-grpc-service:latest
        name: water-grpc
        ports:
        - containerPort: 30000
          name: grpc   
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: water-grpc
  namespace: nutrition
  annotations:
    prometheus.io/scrape: "false"
    prometheus.io/port: "30000"    
  labels:
    app.kubernetes.io/name: water-grpc
    app.kubernetes.io/instance: health-api 
spec:
  ports:
  - name: grpc
    port: 30000
    protocol: TCP
    appProtocol: grpc
  selector:
    app: water-grpc
  type: ClusterIP
